--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div id="app" class="container">
 
 </div>
-<!-- dll -->
-<script src="./bundle.js"></script>
+<script src="./lib/Dll.js"></script>
+<script src="./units/bundle.js"></script>
 </body>
 </html>
